Refactor config loading and saving methods